Prepare APIs for Audit and Scan demo
